--- a/services/metadata/Cargo.toml
+++ b/services/metadata/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc"}
-protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc", package = "muta-protocol" }
-binding-macro = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc" }
+muta = { git = "https://github.com/nervosnetwork/muta", rev = "27a8e8ba"}
+protocol = { git = "https://github.com/nervosnetwork/muta", rev = "27a8e8ba", package = "muta-protocol" }
+binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "27a8e8ba" }
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -21,4 +21,4 @@ byteorder = "1.3"
 [dev-dependencies]
 cita_trie = "2.0"
 async-trait = "0.1"
-framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-rc"}
+framework = { git = "https://github.com/nervosnetwork/muta", rev = "27a8e8ba"}
