--- a/services/riscv/Cargo.toml
+++ b/services/riscv/Cargo.toml
@@ -15,6 +15,9 @@ admission_control = { path = "../admission_control"}
 asset = { path = "../asset" }
 governance = { path = "../governance" }
 kyc = { path = "../kyc" }
+timestamp = { path = "../timestamp"}
+transfer_quota = {path = "../transfer_quota"}
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rlp = "0.4"
